Closed
Bug 571428
Opened 16 years ago
Closed 16 years ago
"ASSERTION: Can't be unbound without being bound originally"
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b1
People
(Reporter: jruderman, Assigned: ehsan.akhgari)
References
Details
(Keywords: assertion, regression, testcase)
Attachments
(2 files, 2 obsolete files)
|
235 bytes,
text/html
|
Details | |
|
2.84 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: Can't be unbound without being bound originally: 'mBoundFrame', file /builds/moz2_slave/mozilla-central-macosx-debug/build/content/html/content/src/nsTextEditorState.cpp, line 1326
More fallout from bug 534785, maybe?
| Assignee | ||
Comment 1•16 years ago
|
||
(In reply to comment #0)
> More fallout from bug 534785, maybe?
Looks like it.
| Assignee | ||
Comment 2•16 years ago
|
||
What's happening here is that we change the type, which causes us to free our nsTextEditorState object, then change the type back to text again, which allocates a new nsTextEditorState object. After this, the original frame gets destroyed, and it asserts when it tries to unbind itself from the nsTextEditorState object, because that object has gone away for a long time.
The only way that I could think of to fix it is to unbind the frame (if there's any) before the nsTextEditorState object is freed. The code doesn't look that clean to me, though. Is there a better way to fix this?
Attachment #450671 -
Flags: review?(roc)
| Assignee | ||
Comment 3•16 years ago
|
||
Let's make HasBoundFrame non-inline so that every file which #includes nsTextEditorState.h shouldn't have to #include nsTextControlFrame.h as well.
Attachment #450671 -
Attachment is obsolete: true
Attachment #450718 -
Flags: review?(roc)
Attachment #450671 -
Flags: review?(roc)
Why not just make nsTextEditorState::UnbindFromFrame check HasBoundFrame internally, and call UnbindFromFrame from nsHTMLInputElement::FreeData?
| Assignee | ||
Comment 5•16 years ago
|
||
Attachment #450718 -
Attachment is obsolete: true
Attachment #451175 -
Flags: review?(roc)
Attachment #450718 -
Flags: review?(roc)
Attachment #451175 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 6•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a6
You need to log in
before you can comment on or make changes to this bug.
Description
•