Bug 571428 - "ASSERTION: Can't be unbound without being bound originally"; r=roc