content/html/content/src/nsTextEditorState.cpp
@@ -1323,12 +1323,11 @@ nsTextEditorState::DestroyEditor()
 void
 nsTextEditorState::UnbindFromFrame(nsTextControlFrame* aFrame)
 {
-  NS_ASSERTION(mBoundFrame, "Can't be unbound without being bound originally");
   NS_ENSURE_TRUE(mBoundFrame, );
 
   // If it was, however, it should be unbounded from the same frame.
-  NS_ASSERTION(aFrame == mBoundFrame, "Unbinding from the wrong frame");
-  NS_ENSURE_TRUE(aFrame == mBoundFrame, );
+  NS_ASSERTION(!aFrame || aFrame == mBoundFrame, "Unbinding from the wrong frame");
+  NS_ENSURE_TRUE(!aFrame || aFrame == mBoundFrame, );
 
   // We need to start storing the value outside of the editor if we're not
   // going to use it anymore, so retrieve it for now.
